update fstab & try fix wifi

--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -131,6 +131,7 @@ on post-fs-data
     # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
 
@@ -314,7 +315,7 @@ service dhcpcd_p2p /system/bin/dhcpcd -ABKLG
     disabled
     oneshot
 
-service iprenew_eth0 /system/bin/dhcpcd -n 
+service iprenew_eth0 /system/bin/dhcpcd -n
     class late_start
     disabled
     oneshot
