--- a/ramdisk/init.mione.rc
+++ b/ramdisk/init.mione.rc
@@ -46,9 +46,8 @@ on boot
 
 on fs
 # mount mmc partitions
-    exec /sbin/dualboot_init ./recovery.fstab
-    mount_all ./recovery.fstab.patched
-
+    exec /sbin/dualboot_init ./fstab.mione
+    mount_all ./fstab.mione.patched
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system /system wait rw barrier=1 noatime nodiratime
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/userdata /data relatime nosuid nodev barrier=1 journal_checksum noauto_da_alloc
     mount ext4 /dev/block/platform/msm_sdcc.1/by-name/persist /persist relatime nosuid nodev barrier=1 journal_checksum noauto_da_alloc
